# mxshop

./: .gitignore  README.md
mxshop-api/: README.md  docker-compose.yaml  go.mod  go.sum  go.work  go.work.sum
mxshop-api/common/: global.go  go.mod  go.sum
mxshop-api/docs/: docs.go  swagger.json  swagger.yaml
mxshop-api/goods-web/: .air.toml  Dockerfile  Makefile  config-dev.yaml  config-pro.yaml  go.mod  go.sum  main.go
mxshop-api/jaeger-test/: go.mod  main.go
mxshop-api/order-web/: .air.toml  Dockerfile  config-dev.yaml  config-pro.yaml  go.mod  go.sum  main.go
mxshop-api/oss-web/: Dockerfile  config-dev.yaml  go.mod  go.sum  main.go  oss.http
mxshop-api/sentinel-test/: go.mod  go.sum
mxshop-api/user-web/: Dockerfile  config-dev.yaml  config-pro.yaml  go.mod  go.sum  main.go
mxshop-api/userop-web/: Dockerfile  config-pro.yaml  go.mod  go.sum  main.go
mxshop-manage/mxshop-api/: docker-compose.yaml  go.work
mxshop-manage/mxshop_srvs/: .python-version  docker-compose.yml  pyproject.toml  run.sh
mxshop-manage/mxshop_srvs/common/: build_proto.py
mxshop-manage/mxshop_srvs/common/proto/: dict.proto  inventory.proto  user.proto
mxshop-manage/mxshop_srvs/common/proto/pb/: address_pb2.py  goods_pb2.pyi  goods_pb2_grpc.py  inventory_pb2.py  message_pb2.py  user_pb2.pyi  user_pb2_grpc.py  userfav_pb2.pyi
mxshop-manage/mxshop_srvs/common/register/: base.py  nacos.py
mxshop-manage/mxshop_srvs/goods_srv/settings/: settings.py
mxshop-manage/mxshop_srvs/goods_srv/test/: category.py  goods.py
mxshop-manage/mxshop_srvs/inventory_srv/model/: models.py
mxshop-manage/mxshop_srvs/inventory_srv/proto/: inventory_pb2.py  inventory_pb2_grpc.py
mxshop-manage/mxshop_srvs/inventory_srv/test/: lock_test.py
mxshop-manage/mxshop_srvs/order_srv/model/: models.py
mxshop-manage/mxshop_srvs/order_srv/test/: lock_test.py  order.py
mxshop-manage/mxshop_srvs/user_srv/: server.py
mxshop-manage/mxshop_srvs/user_srv/handler/: dict.py  user.py
mxshop-manage/mxshop_srvs/user_srv/model/: models.py
mxshop-manage/mxshop_srvs/userop_srv/: Dockerfile
mxshop-web/mall-master/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
mxshop_srvs/: .python-version  README.md  common_pb2.py  pyproject.toml  requirements.txt  role_pb2.py  role_pb2_grpc.py  run.sh
mxshop_srvs/goods_srv/: server.py
mxshop_srvs/inventory_srv/: server.py
mxshop_srvs/order_srv/: server.py
mxshop_srvs/user_srv/: server.py
(+534 files in other folders)
