[project]
name = "mxshop-srvs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "loguru>=0.7.3",
    "nacos-sdk-python>=2.0.9",
    "passlib>=1.7.4",
    "peewee>=3.18.3",
    "python-consul2>=0.1.5",
]
